合并了目前的关注和note、修改用户信息
