# controllers/note_controllers.go
@@ -9,7 +9,7 @@ import (
 	"travel-from-sysu-backend/models"
 )
 
-// PublishNote 发布笔记请求参数
+// PublishNoteRequest 发布笔记请求参数
 type PublishNoteRequest struct {
 	NoteTitle     string   `json:"noteTitle" binding:"required"`
 	NoteContent   string   `json:"noteContent" binding:"required"`
@@ -17,16 +17,27 @@ type PublishNoteRequest struct {
 	NoteTagList   []string `json:"noteTagList"` // 使用数组类型
 	NoteType      string   `json:"noteType"`
 	NoteURLs      string   `json:"noteURLs"`
-	NoteCreatorID int      `json:"noteCreatorID"`
+	NoteCreatorID uint     `json:"noteCreatorID"`
 }
 
-// PublishNote 笔记发布成功的返回信息
+// PublishNoteResponse 笔记发布成功的返回信息
 type PublishNoteResponse struct {
 	Status string `json:"status"`
 	Code   int    `json:"code"`
 	Error  string `json:"error,omitempty"`
 }
 
+// PublishNote 发布笔记接口
+// @Summary 发布笔记接口
+// @Description 用户通过提供笔记标题、内容等信息来发布一篇新的笔记
+// @Tags 笔记相关接口
+// @Accept application/json
+// @Produce application/json
+// @Param data body PublishNoteRequest true "发布笔记请求参数"
+// @Success 200 {object} PublishNoteResponse "笔记发布成功响应信息"
+// @Failure 400 {object} ErrorResponse "请求参数错误"
+// @Failure 500 {object} ErrorResponse "服务器内部错误"
+// @Router /publishNote [post]
 func PublishNote(ctx *gin.Context) {
 	var req PublishNoteRequest
 
